<resources>
    <string name="app_name">Development</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_menu">Home</string>
    <string name="profile_menu">Profile</string>
    <string name="version">Version</string>
    <string name="help">Help</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="submit">Login</string>
    <string name="register_rest_password">Register</string>
    <string name="error">Empty</string>
    <string name="setting">operation</string>
    <string name="checkYourNetwork">Check Your Network!!</string>
    <string name="birthDate">Date of</string>
    <string name="name_user">First Name</string>
    <string name="lastName">Laste Name</string>
    <string name="role">Role</string>
    <string name="code">National_code</string>
    <string name="date_of_birtday">Date of birth</string>
    <string name="grade">Grade</string>
    <string name="academic_year">Academic year</string>
    <string name="barnameh_c">Class program</string>
    <string name="barnameh_e">examination</string>
    <string name="karnameh">report card</string>
    <string name="ertebat">Relationship</string>
    <string name="information_app">Information app</string>
    <string name="clas">Calsses</string>
    <string name="emtehan">Exam List</string>
    <string name="aval">First</string>
    <string name="dovom">Secend</string>
    <string name="editProfile">Edite Profile</string>
    <string name="update">Update</string>
    <string name="national_code">National Code </string>
    <string name="exit">Exit</string>
    <string name="qr_code">Settings</string>
    <string name="galleryImages">Gallery</string>
    <string name="select_class_to_view">Select Class to view</string>
    <string name="title">Click her fo edite</string>
    <string name="description">Description</string>
    <string name="title2">Shear</string>
    <string name="description2">careate qr code and shareit</string>
    <string name="title3">Exit</string>
    <string name="description3">click her for exit</string>
    <string name="exam">Exam</string>
    <string name="question">Question</string>
    <string name="workbook">Workbook</string>
    <string name="ranking">Ranking</string>
    <string name="curriclum">curriclum</string>
    <string name="attendance">Attendance</string>
    <string name="inf">Information</string>
    <string name="bashe">OK</string>
    <string name="err">Do you want to exit?</string>
    <string name="err500">Error 500</string>
    <string name="well">Well Come</string>
    <string name="sevom">thired</string>
    <string name="charom">Fourth</string>
    <string name="panjom">the fifth</string>
    <string name="sheshom">sixth</string>
    <string name="select_text">Selecet Language</string>
    <string name="select_language">Select Language</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>

</resources>